@@ -5,6 +5,10 @@ Version 1.8.5
        restore on cancel as well. (Stefan)
 - BUG: Issue #595: TortoisePlink crash
        for x64. (Stefan)
+- BUG: Issue #601: Crash fetching properties
+       in CfM dialog. (Stefan)
+- BUG: Issue #602: Log dialog message loses
+       formatting after clicking a link. (Stefan)
 
 Version 1.8.4
 - BUG: Issue 584: Revert from log dialog bottom pane
